add moderation for comments

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
         
 <head>
     <meta charset="UTF-8">
@@ -76,14 +76,14 @@
     <div class="btnRight"></div>
     <div class="info"></div>
     <div class="hidden images">
-    <img src="/images/slider0.jpg" class="sliderImages">
-    <img src="/images/slider1.jpg " class="sliderImages"> 
-    <img src="/images/slider2.jpg" class="sliderImages">
-    <img src="/images/slider3.jpg" class="sliderImages">
-    <img src="/images/slider4.jpg" class="sliderImages">
-    <img src="/images/slider5.jpg" class="sliderImages">
-    <img src="/images/slider6.jpg" class="sliderImages">
-    <img src="/images/slider7.jpg" class="sliderImages">
+    <img src="/images/slider0.jpg" alt="" class="sliderImages">
+    <img src="/images/slider1.jpg " alt="" class="sliderImages"> 
+    <img src="/images/slider2.jpg" alt="" class="sliderImages">
+    <img src="/images/slider3.jpg" alt="" class="sliderImages">
+    <img src="/images/slider4.jpg" alt="" class="sliderImages">
+    <img src="/images/slider5.jpg" alt="" class="sliderImages">
+    <img src="/images/slider6.jpg" alt="" class="sliderImages">
+    <img src="/images/slider7.jpg" alt="" class="sliderImages">
 
   </div>
   </div>
@@ -210,11 +210,11 @@
   <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
 </div>
 <div class="footer-social">
-  <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
-  <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
-  <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
-  <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
-  <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
+  <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png' alt=""> </a> </div>
+  <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png' alt=""></a> </div>
+  <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
+  <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
+  <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
 
 </div>
 <div class="footer-author">
