--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>  
+<header>
 <div class="header">
     <div id="menu-icon">
       <span class="first"></span>
@@ -223,11 +224,11 @@
     <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
   </div>
   <div class="footer-social">
-    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
-    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
-    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
-    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
-    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
+    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png' alt=""> </a> </div>
+    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png' alt=""></a> </div>
+    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
+    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
+    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
   
   </div>
   <div class="footer-author">
