--- a/pages/price.html
+++ b/pages/price.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <header>
     <div class="header">
         <div id="menu-icon">
           <span class="first"></span>
@@ -102,7 +103,7 @@
    </select></p> -->
   <div class="main-price-block">
   
-    <div price="10000" time = '6' popul ="1"class="price price-econom">
+    <div data-price="10000" data-time = '6' data-popul ="1" class="price price-econom">
       <div class="price-wedding-img"></div>
       <div class="price-list">
         <ul>
@@ -114,10 +115,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div>
     </div>
-    <div  price="20000" time = '12' popul ="5" class="price price-vip">
+    <div  data-price="20000" data-time = '12' data-popul ="5" class="price price-vip">
       <div class="price-wedding-img"></div>
       <div class="price-list">
         <ul>
@@ -129,10 +130,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div>
-    <div price="700" time = '3'  popul ="1" class="price price-econom">
+    <div data-price="700" data-time = '3'  data-popul ="1" class="price price-econom">
       <div class="price-newyear-img"></div>
       <div class="price-list">
         <ul>
@@ -144,10 +145,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div>
     </div>
-    <div price="1000" time = '5' popul ="4" class="price price-vip">
+    <div data-price="1000" data-time = '5' data-popul ="4" class="price price-vip">
       <div class="price-newyear-img"></div>
       <div class="price-list">
         <ul>
@@ -159,10 +160,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div>
-    <div price="600" time = '2' popul ="2" class="price price-econom">
+    <div data-price="600" data-time = '2' data-popul ="2" class="price price-econom">
       <div class="price-family-img"></div>
       <div class="price-list">
         <ul>
@@ -174,10 +175,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div>
     </div>
-    <div price="900" time = '4' popul ="3" class="price price-vip">
+    <div data-price="900" data-time = '4' data-popul ="3" class="price price-vip">
       <div class="price-family-img"></div>
       <div class="price-list">
         <ul>
@@ -189,10 +190,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div>
-    <div price="500" time = '3' popul ="4" class="price price-econom">
+    <div data-price="500" data-time = '3' data-popul ="4" class="price price-econom">
       <div class="price-love-img"></div>
       <div class="price-list">
         <ul>
@@ -204,10 +205,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div>
     </div>
-    <div price="700" time = '4' popul ="1" class="price price-vip">
+    <div data-price="700" data-time = '4' data-popul ="1" class="price price-vip">
       <div class="price-love-img"></div>
       <div class="price-list">
         <ul>
@@ -219,10 +220,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div>
-    <div price="2000" time = '5' popul ="0" class="price price-econom">
+    <div data-price="2000" data-time = '5' data-popul ="0" class="price price-econom">
       <div class="price-master-img"></div>
       <div class="price-list">
         <ul>
@@ -232,10 +233,10 @@
           <li>Количество сделанных фото:50-55шт.</li>
           <li>Индивидуальный подход к каждому</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Записаться"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Записаться</a></div>
       </div>
     </div>
-    <div price="10000" time = '6' popul ="1" class="price price-econom">
+    <div data-price="10000" data-time = '6' data-popul ="1" class="price price-econom">
       <div class="price-party-img"></div>
       <div class="price-list">
         <ul>
@@ -247,10 +248,10 @@
           <li class="hidden-price">Консультация фотографа и помощь в создании образов</li>
           <li class="hidden-price"> Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div>
     </div>
-    <div price="1500" time = '5' popul ="5" class="price price-vip">
+    <div data-price="1500" data-time = '5' data-popul ="5" class="price price-vip">
       <div class="price-birthday-img"></div>
       <div class="price-list">
         <ul>
@@ -262,10 +263,10 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div>
-    <div price="1000" time = '3' popul ="3" class="price price-vip">
+    <div data-price="1000" data-time = '3' data-popul ="3" class="price price-vip">
       <div class="price-kids-img"></div>
       <div class="price-list">
         <ul>
@@ -277,7 +278,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div> 
 
@@ -309,11 +310,11 @@
     <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
   </div>
   <div class="footer-social">
-    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
-    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
-    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
-    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
-    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
+    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png' alt=""> </a> </div>
+    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png' alt=""></a> </div>
+    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
+    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
+    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
   
   </div>
   <div class="footer-author">
