--- a/pages/service-love.html
+++ b/pages/service-love.html
@@ -91,7 +91,6 @@
   <div class="container-item">
   <div class="item-text">
   <h2>Секреты успешной love story фотосъемки  </h2>
-      <p>
         <span>Результат успешной фотосессии зависит не только от мастерства фотографа, качества аппаратуры, реквизита и прочих технических моментов. Большую роль играет предварительная подготовка непосредственных участников процесса и более того, их обоюдное желание участвовать в съемке. Love story фотосессия состоит из таких этапов:</span>
         <ul>
           <li>экспозиция — преддверие и зарождение любовной истории;</li>
@@ -106,7 +105,7 @@
           <li>сделать прическу и макияж.</li>
         </ol>
         <span>Отправляясь на мероприятие необходимо иметь только положительный настрой. Все участники процесса должны чувствовать себя легко и непринужденно, что позволит фотографу сделать живые и откровенные снимки. Фотосессия love story, цена которой определяется многими факторами, окупится теми эмоциями и незабываемыми моментами, которые будут положены в основу летописи истории любви.</span>
-      </p>
+      
     </div>
     <div class="item-price">
       <div class="price price-econom">
@@ -121,7 +120,7 @@
             <li>Консультация фотографа и помощь в создании образов</li>
             <li>Аренда фотостудии оплачивается отдельно</li>
           </ul>
-          <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+          <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
         </div>
       </div>
       <div class="price price-vip">
@@ -136,7 +135,7 @@
             <li>Консультация фотографа и помощь в создании образов</li>
             <li>Аренда фотостудии оплачивается отдельно</li>
           </ul>
-          <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+          <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
         </div> 
       </div>
     </div>
@@ -165,11 +164,11 @@
         <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
       </div>
       <div class="footer-social">
-        <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
-        <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
-        <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
-        <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
-        <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
+        <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png' alt=""> </a> </div>
+        <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png' alt=""></a> </div>
+        <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
+        <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
+        <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
       
       </div>
       <div class="footer-author">
