--- a/pages/service-wedding.html
+++ b/pages/service-wedding.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+  <header>
     <div class="header">
         <div id="menu-icon">
           <span class="first"></span>
@@ -98,7 +99,7 @@
 <div class="container-item">
 <div class="item-text">
 <h2>Особенности cвадебной съемки</h2>
-  <p>
+  
     <span>Свадьба - это прежде всего праздник двух любящих людей, которые делают его в первую очередь для себя, поэтому хочется, чтобы  молодожены  кайфовали, были расслаблены и действительно получили удовольствие от всего процесса. Но очень часто, это превращается в нервотрепку с кучей непредвиденных обстоятельств. Именно поэтому, я стараюсь на первой встрече максимально правильно, с учетом всех нюансов расписать тайминг или заручиться поддержкой организаторов, у которых в этом еще больше опыта.</span>
     <span>Почему важно выбрать хорошего фотографа на свадьбу:</span>
     <ul>
@@ -107,7 +108,7 @@
       <li>Порой очень важны детали торжества. Приглашенный фотограф на свадьбу обязательно сделает снимки обручальных колец, момент поздравления родителей, вынос торта, элементы свадебного стола, восхищенные взгляды и прочие, важные для молодых моменты.</li>
     </ul>
     <span> Приглашенный свадебный фотограф на свадьбу никогда не будет гнаться за количеством сделанных снимков. Для него важно снять особенный поцелуй молодых. Причем этот кадр должен быть сногсшибательным, захватывающим, неповторимым. Он не будет постоянно заставлять молодых людей и их гостей позировать. Фотограф сам найдет милые, трогательные, смешные моменты, так как именно для этого его пригласили. И конечно, свадебный фотограф в Харькове не упустит шанс сделать последний кадр, в котором главными действующими лицами будут молодожены. Он может стать настоящей изюминкой всей фотосессии.</span>
-    </p>
+    
 </div>
 <div class="item-price">
   <div class="price price-econom">
@@ -122,7 +123,7 @@
         <li>Консультация фотографа и помощь в создании образов</li>
         <li>Аренда фотостудии оплачивается отдельно</li>
       </ul>
-      <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать "></a></div>
+      <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
     </div>
   </div>
   <div class="price price-vip">
@@ -137,7 +138,7 @@
         <li>Консультация фотографа и помощь в создании образов</li>
         <li>Аренда фотостудии оплачивается отдельно</li>
       </ul>
-      <div class="booking"><a href="tel:+38(098)786-66-42"><input type="button" value="Заказать"></a></div>
+      <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
     </div> 
   </div>
 </div>
@@ -166,11 +167,11 @@
     <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
   </div>
   <div class="footer-social">
-    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
-    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
-    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
-    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
-    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
+    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png' alt=""> </a> </div>
+    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png' alt=""></a> </div>
+    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
+    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
+    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
   
   </div>
   <div class="footer-author">
