--- a/pages/service.html
+++ b/pages/service.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <header>
     <div class="header">
         <div id="menu-icon">
           <span class="first"></span>
@@ -64,7 +65,7 @@
         </nav>
     </div>
 
-
+</header>
 <div class="main_photo">
     <img src="/images/main6.jpg" alt="">
 </div> 
@@ -89,7 +90,7 @@
 
                 </div>
                 <div class="service-button">
-                    <a href="service-wedding.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-wedding.html">Заказать</a> 
                 </div>
             </div>
             </div>
@@ -111,7 +112,7 @@
                         <p>Новый год — яркий, красочный, феерический праздник. Его с нетерпением ждут дети и взрослые.Не удивительно, что в памяти хочется оставить воспоминания об этом удивительном времени. Поможет в этом новогодняя фотосессия. </p>
                     </div>
                     <div class="service-button">
-                    <a href="service-newyear.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-newyear.html">Заказать</a> 
 
                     </div>
 
@@ -131,7 +132,7 @@
                     <p>Новый год — яркий, красочный, феерический праздник. Его с нетерпением ждут дети и взрослые.Не удивительно, что в памяти хочется оставить воспоминания об этом удивительном времени. Поможет в этом новогодняя фотосессия. </p>
                 </div>
                 <div class="service-button">
-                   <a href="service-newyear.html"> <input type="button"  value="Заказать"></a> 
+                   <a href="service-newyear.html">Заказать</a> 
 
                 </div>
 
@@ -158,7 +159,7 @@
                     </p>
                 </div>
                 <div class="service-button">
-                    <a href="service-family.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-family.html"> Заказать</a> 
   
                 </div>
 
@@ -181,7 +182,7 @@
                         <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей. Запечатлеть свои отношения, эмоции и искренние чувства им позволит фотосессия в стиле лав стори.</p>
                     </div>
                     <div class="service-button">
-                        <a href="service-love.html"> <input type="button"  value="Заказать"></a> 
+                        <a href="service-love.html"> Заказать</a> 
 
                     </div>
 
@@ -198,10 +199,10 @@
                     <span> от 300 грн/час</span>
                 </div>
                 <div class="service-about">
-                    <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей. Запечатлеть свои отношения, эмоции и искренние чувства им позволит фотосессия в стиле лав стори.</p>
+                    <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей.</p>
                 </div>
                 <div class="service-button">
-                    <a href="service-love.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-love.html"> Заказать</a> 
 
                 </div>
 
@@ -224,11 +225,11 @@
                 </div>
                 <div class="service-about">
                     <p>
-                        Мастер-класс — это отличная возможность обучиться чему-то новому или повысить своё профессиональное мастерство. В настоящее время это одна из самых удобных форм обучения. Мастер-класс включает в себя небольшую теоретическую часть и большую практическую часть, где мастер работает с каждым индивидуально.
+                        Мастер-класс — это отличная возможность обучиться чему-то новому или повысить своё профессиональное мастерство. В настоящее время это одна из самых удобных форм обучения.
                     </p>
                 </div>
                 <div class="service-button">
-                    <a href="service-master.html"> <input type="button" value="Заказать"></a> 
+                    <a href="service-master.html">Заказать</a> 
   
                 </div>
 
@@ -259,11 +260,11 @@
       <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
     </div>
     <div class="footer-social">
-        <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
-        <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
-        <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
-        <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
-        <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
+        <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png' alt=""> </a> </div>
+        <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png' alt=""></a> </div>
+        <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
+        <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
+        <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
     
     </div>
     <div class="footer-author">
