--- a/pages/blog.html
+++ b/pages/blog.html
@@ -99,11 +99,16 @@
         </ul>
     </div> -->
     <div class="container">
-      <div class="blog-container">
-          
+      <h1>Мой Блог</h1>
+      <button id="date-up">Click me to sort</button>
+      <div class="blog-container">      </div>
 
 
-      </div>
+
+	
+      <ul class="pagination1"></ul>
+
+
       <div class="commentsBlock">
         <h1>Коментарии</h1>
       <button class="admin" >admin</button>
@@ -113,7 +118,7 @@
         <div class="name"></div>
         <div class="body"></div>
 
-        <h2>Оставить комментарий</h2>
+        <h2 id="comments">Оставить комментарий</h2>
         <div class="commentsInput">
 
           <form > 
@@ -184,7 +189,7 @@
       </div>
       </footer>
   
-
+<script src="/scripts/blogSorting.js"></script>
 <script src="/scripts/search.js"></script>
 <script src="/scripts/blog.js"></script>
 <script src="/scripts/main.js"></script>
