add media and correct mistakes with blog

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <li class="dropdown">
           <a href="pages/blog.html" target="_self">Блог</a>
           <ul>
-            <li><a href="#">About Version</a></li>
-            <li><a href="#">About Version</a></li> 
+            <li><a href="pages/blog.html#posts">Посты</a></li>
+            <li><a href="pages/blog.html#comments">Комментарии</a></li> 
           </ul>        
       </li>
       <li>
@@ -76,8 +76,8 @@
     <div class="btnRight"></div>
     <div class="info"></div>
     <div class="hidden images">
-    <img src="/images/slider0.jpg" alt="" class="sliderImages">
-    <img src="/images/slider1.jpg " alt="" class="sliderImages"> 
+    <!-- <img src="/images/slider0.jpg" alt="" class="sliderImages"> -->
+    <!-- <img src="/images/slider1.jpg " alt="" class="sliderImages">  -->
     <img src="/images/slider2.jpg" alt="" class="sliderImages">
     <img src="/images/slider3.jpg" alt="" class="sliderImages">
     <img src="/images/slider4.jpg" alt="" class="sliderImages">
