--- a/pages/price.html
+++ b/pages/price.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Цены</title>
     <link rel="stylesheet" href="/styles/main.css">
-
 </head>
-
 <body>
   <header>
     <div class="header">
@@ -49,8 +47,8 @@
               <li class="dropdown">
                 <a href="blog.html" target="_self">Блог</a>
                 <ul>
-                  <li><a href="#">About Version</a></li>
-                  <li><a href="#">About Version</a></li> 
+                  <li><a href="blog.html#posts">Посты</a></li>
+                  <li><a href="blog.html#comments">Комментарии</a></li> 
                 </ul>        
               </li>
               <li>
@@ -60,10 +58,9 @@
                 <a href="contact.html" target="_self">Контаткты</a>
               </li>
           </ul>
-           
         </nav>
     </div>
-</header>
+  </header>
 
 <div class="main_photo">
   <img src="/images/main.jpg" alt="">
@@ -90,19 +87,9 @@
     <button id="price-down" > От дорогих к дешевым</button>
     <button id="popular" > По популярности</button>
     <button id="time" > По времени</button>
-
   </div>
-  </div>
-
-  <!-- <p><select >
-    <option disabled selected>Сортировать</option>
-    <option > <button id="price-up"> От дешевых к дорогим</button></option>
-    <option id="price-down">От дорогих к дешевым</option>
-    <option id="popular">По популярности</option>
-    <option >По рейтингу</option>
-   </select></p> -->
-  <div class="main-price-block">
-  
+</div>
+<div class="main-price-block">
     <div data-price="10000" data-time = '6' data-popul ="1" class="price price-econom">
       <div class="price-wedding-img"></div>
       <div class="price-list">
@@ -281,19 +268,8 @@
         <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
       </div> 
     </div> 
-
-
-
+  </div>
 </div>
-</div>
-
-
-
-
-
-
-
-
 
 <footer class="footer-desktop">
   <div class="footer-menu">
@@ -315,17 +291,14 @@
     <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png' alt=""></a> </div>
     <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png' alt=""></a> </div>
     <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked.png' alt=""></a> </div>
-  
   </div>
   <div class="footer-author">
     <h6>Andrii Tymko  2019</h6>
   </div>
   </footer>
 
-<script src="/scripts/main.js"></script>
 
 <script src="/scripts/search.js"></script>
 <script src="/scripts/sorting.js"></script>
-
 </body>
 </html>
