--- a/pages/service-wedding.html
+++ b/pages/service-wedding.html
@@ -32,7 +32,6 @@
               <a href="service.html" target="_self">Услуги</a>
               <ul>
                 <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
-                <!-- <li><a href="/service-wedding.html">Свадебная фотосессия</a></li>  -->
                 <li><a href="service-family.html">Семейная фотосессия</a></li>
                 <li><a href="service-love.html">Love story фотосессия</a></li> 
                 <li><a href="service-master.html">Мастер класс</a></li> 
@@ -49,8 +48,8 @@
               <li class="dropdown">
                 <a href="blog.html" target="_self">Блог</a>
                 <ul>
-                  <li><a href="#">About Version</a></li>
-                  <li><a href="#">About Version</a></li> 
+                  <li><a href="blog.html#posts">Посты</a></li>
+                  <li><a href="blog.html#comments">Комментарии</a></li> 
                 </ul>        
               </li>
               <li>
@@ -145,13 +144,6 @@
 </div>
 
 
-
-
-
-
-
-
-
 <footer class="footer-desktop">
   <div class="footer-menu">
     <ul>
@@ -180,10 +172,6 @@
   </footer>
 
 
-
-
-
 <script src="/scripts/search.js"></script>
-<script src="/scripts/main.js"></script>
 </body>
 </html>
