--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Портфолио</title>
     <link rel="stylesheet" href="/styles/main.css">
-
 </head>
 <body>  
 <header>
@@ -49,8 +48,8 @@
           <li class="dropdown">
             <a href="blog.html" target="_self">Блог</a>
             <ul>
-              <li><a href="#">About Version</a></li>
-              <li><a href="#">About Version</a></li> 
+              <li><a href="blog.html#posts">Посты</a></li>
+              <li><a href="blog.html#comments">Комментарии</a></li> 
             </ul>        
           </li>
           <li>
@@ -60,154 +59,19 @@
             <a href="contact.html" target="_self">Контаткты</a>
           </li>
       </ul>
-       
     </nav>
   </div>
-  </header>
-
+</header>
 
 <div class="main_photo">
     <img src="/images/main5.jpg" alt="">
 </div>
 <h2 class="main_header"> Портфолио</h2>
 <div class="container">
-
-
-<h1>Последние работы</h1>
-  <!-- <ul class="pagination1"></ul> -->
-
-<div class="imageGrid">
-  <!-- <div class="tile tile1 "  >
-    <div class="textWrapper"><h2>Pont de Bir-Hakeim, Paris</h2>
-      <div class="content">The western part of the Pont de Bir-Hakeim seen at night. Buildings of the 16th arrondissement of Paris are visible in the background.</div>
-    </div>
-  </div>
-<div class="tile tile2"  >
-  <div class="textWrapper"><h2>Wiesen Viaduct, Switzerland</h2>
-    <div class="content">A RhB Ge 4/4 II with a push–pull train crosses the Wiesen Viaduct between Wiesen and Filisur, Switzerland.</div>
-  </div>
+  <h1>Последние работы</h1>
+  <div class="imageGrid"></div>
+  <ul class="pagination1"></ul>
 </div>
-<div class="tile tile3" >
-  <div class="textWrapper"><h2>Maya Beach, Thailand</h2>
-    <div class="content">Long-tail boats in Maya Beach, Ko Phi Phi Lee, Thailand.</div>
-  </div>
-  </div>
-<div class="tile tile4" >
-  <div class="textWrapper"><h2>Chi Minh City, Vietnam.</h2>
-    <div class="content">Night view of Ho Chi Minh City from Bitexco Financial Tower, Vietnam.</div>
-  </div>
-  </div>
-  <div class="tile tile5" >
-  <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-    <div class="content"></div>
-  </div>
-  </div>
-  <div class="tile tile6">
-    <div class="textWrapper"><h2>Pont de Bir-Hakeim, Paris</h2>
-      <div class="content">The western part of the Pont de Bir-Hakeim seen at night. Buildings of the 16th arrondissement of Paris are visible in the background.</div>
-    </div>
-  </div>
-<div class="tile tile7">
-  <div class="textWrapper"><h2>Wiesen Viaduct, Switzerland</h2>
-    <div class="content">A RhB Ge 4/4 II with a push–pull train crosses the Wiesen Viaduct between Wiesen and Filisur, Switzerland.</div>
-  </div>
-</div>
-<div class="tile tile8"  >
-  <div class="textWrapper"><h2>Maya Beach, Thailand</h2>
-    <div class="content">Long-tail boats in Maya Beach, Ko Phi Phi Lee, Thailand.</div>
-  </div>
-  </div>
-<div class="tile tile9">
-  <div class="textWrapper"><h2>Chi Minh City, Vietnam.</h2>
-    <div class="content">Night view of Ho Chi Minh City from Bitexco Financial Tower, Vietnam.</div>
-  </div>
-  </div>
-<div class="tile tile10" >
-  <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-    <div class="content">dsdssdsddsdsds</div>
-  </div>
-  </div> -->
-  <!-- <div class="tile tile11" >
-  <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-    <div class="content"></div>
-  </div>
-  </div>
-  <div class="tile tile12" >
-    <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-      <div class="content"></div>
-    </div>
-    </div>
-    <div class="tile tile13">
-      <div class="textWrapper"><h2>Pont de Bir-Hakeim, Paris</h2>
-        <div class="content">The western part of the Pont de Bir-Hakeim seen at night. Buildings of the 16th arrondissement of Paris are visible in the background.</div>
-      </div>
-    </div>
-  <div class="tile tile14" >
-    <div class="textWrapper"><h2>Wiesen Viaduct, Switzerland</h2>
-      <div class="content">A RhB Ge 4/4 II with a push–pull train crosses the Wiesen Viaduct between Wiesen and Filisur, Switzerland.</div>
-    </div>
-  </div>
-  <div class="tile tile15" >
-    <div class="textWrapper"><h2>Maya Beach, Thailand</h2>
-      <div class="content">Long-tail boats in Maya Beach, Ko Phi Phi Lee, Thailand.</div>
-    </div>
-    </div>
-  <div class="tile tile16" >
-    <div class="textWrapper"><h2>Chi Minh City, Vietnam.</h2>
-      <div class="content">Night view of Ho Chi Minh City from Bitexco Financial Tower, Vietnam.</div>
-    </div>
-    </div>
-  <div class="tile tile17" >
-    <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-      <div class="content">dsdssdsddsdsds</div>
-    </div>
-    </div>
-    <div class="tile tile18" >
-    <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-      <div class="content"></div>
-    </div>
-    </div>
-    <div class="tile tile19" >
-      <div class="textWrapper"><h2>Chi Minh City, Vietnam.</h2>
-        <div class="content">Night view of Ho Chi Minh City from Bitexco Financial Tower, Vietnam.</div>
-      </div>
-      </div>
-    <div class="tile tile20" >
-      <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-        <div class="content">dsdssdsddsdsds</div>
-      </div>
-      </div>
-      <div class="tile tile21">
-      <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-        <div class="content"></div>
-      </div>
-      </div>
-      <div class="tile tile22" >
-        <div class="textWrapper"><h2>Maya Beach, Thailand</h2>
-          <div class="content">Long-tail boats in Maya Beach, Ko Phi Phi Lee, Thailand.</div>
-        </div>
-        </div>  
-        <div class="tile tile23" >
-          <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-            <div class="content">dsdssdsddsdsds</div>
-          </div>
-          </div>
-          <div class="tile tile24" >
-            <div class="textWrapper"><h2>Porto City Hall, Portugal</h2>
-              <div class="content"></div>
-            </div>
-            </div> -->
-</div>
-<ul class="pagination1"></ul>
-</div>
-
-
-
-
-
-
-
-
 
 <footer class="footer-desktop">
   <div class="footer-menu">
@@ -238,9 +102,5 @@
 
 <script src="/scripts/pagination1.js"></script>
 <script src="/scripts/search.js"></script>
-<script src="/scripts/main.js"></script>
-
-
 </body>
-
 </html>
